--- a/map/index.html
+++ b/map/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBD7m74t1r0rhWeiSjNz2BgxIQ8bjS0l64"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=API-KEY"></script>
   </head>
   <body>
     <div id="map" style="width: 600px; height: 600px"></div>
